@@ -579,3 +579,7 @@ a+b= [[ (2,0) (0,0) ]
  [ (0,0) (1,0) ]]
 a-b= [[ (0,0) (0,0) ]
  [ (0,0) (0,0) ]]
+sm * w= [2.6,6.3]
+sq * w= [2.6,6.3]
+sm * w= [(2,-0.6),(6,0.3)]
+sq * w= [(2,-0.6),(6,0.3)]
